tests/expectations/parser/unreachable/postfix_fail.out
namespace = "ParseStatement"
expectation = "Fail"
outputs = [
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a;;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a.;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a,;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a[;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a];
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a{;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a};
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a);
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a:;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a?;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a=;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a==;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a!;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a!=;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a>;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a>=;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a<;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a<=;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a>;
     |       ^""",
    """
Error [EPAR0370005]: expected : -- found '='
    --> test:1:7
     |
   1 | let x = a..;
     |       ^""",
]
